fixar tipos plano do sigefes